create header component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,17 @@
 ---
-
+import Header from '../components/Header.astro';
 ---
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Astro</title>
+		<title>Armno.in.th on Astro</title>
 		<style global>
 		@import '../styles/global.css';
 		</style>
 	</head>
 	<body>
+		<Header />
 		<h1 class="text-2xl font-bold">Astro with tailwind</h1>
 	</body>
 </html>
