add content to home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,33 @@ import Header from '../components/Header.astro';
 	</head>
 	<body>
 		<Header />
-		<h1 class="text-2xl font-bold">Astro with tailwind</h1>
+		<main class="w-1/2 mt-20 mx-auto">
+			<div class="text-gray-400 uppercase font-semibold tracking-wider text-md">Hi there</div>
+			<h1 class="text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
+				I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
+
+			<p class="mt-20">
+				<strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
+				I&rsquo;m currently leading the frontend team at buzzwoo where my focus is on JavaScript, Angular, and frontend performance.
+			</p>
+
+			<p>In my free time, I enjoy writing, reading books, taking photos, <a href="#">building mechanical keyboards</a> and getting lost on my <a href="#">road bike</a>.</p>
+
+			<p>
+        You can find what I&rsquo;m doing on <a href="https://github.com/armno">GitHub</a>,
+        or check out my <a href="/post">blog</a> to see what I&rsquo;ve learned recently.
+      </p>
+
+      <h2>Get in touch</h2>
+      <p>
+        If you want to contact me, or just want to say hi, you can send me an email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>.
+      </p>
+
+      <p>
+        Have a great day!
+        <br>
+        &ndash; Armno
+      </p>
+		</main>
 	</body>
 </html>
