add tailwind typography plugin

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center">
+<header class="container mx-auto flex justify-between items-center">
   <a href="/" class="inline-block w-20 h-20">
     <svg class="w-20 h-20" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect width="50" height="50" fill="black"/>
