--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,12 @@ import Header from '../components/Header.astro';
 	</head>
 	<body>
 		<Header />
-		<main class="w-1/2 mt-20 mx-auto">
-			<div class="text-gray-400 uppercase font-semibold tracking-wider text-md">Hi there</div>
-			<h1 class="text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
+		<main class="px-6 lg:w-1/2 lg:px-0 mt-20 mx-auto pb-10 prose lg:prose-xl">
+			<div class="text-gray-400 uppercase font-semibold tracking-wider text-sm">Hi there</div>
+			<h1 class="text-2xl lg:text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
 				I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
 
-			<p class="mt-20">
+			<p class="mt-20 lg:mt-24">
 				<strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
 				I&rsquo;m currently leading the frontend team at buzzwoo where my focus is on JavaScript, Angular, and frontend performance.
 			</p>
@@ -29,7 +29,7 @@ import Header from '../components/Header.astro';
         or check out my <a href="/post">blog</a> to see what I&rsquo;ve learned recently.
       </p>
 
-      <h2>Get in touch</h2>
+      <h3>Get in touch</h3>
       <p>
         If you want to contact me, or just want to say hi, you can send me an email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>.
       </p>
