create PageLayout. fill in content from uses page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,6 @@
   <nav>
     <a href="#" class="font-bold inline-block mx-4">About</a>
     <a href="#" class="text-gray-400 inline-block mx-4">Blog</a>
-    <a href="#" class="text-gray-400 inline-block mx-4">Uses</a>
+    <a href="/uses" class="text-gray-400 inline-block mx-4">Uses</a>
   </nav>
 </header>
