--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,44 +1,31 @@
 ---
-import Header from '../components/Header.astro';
+import PageLayout from '../layouts/PageLayout.astro';
 ---
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>Armno.in.th on Astro</title>
-		<style global>
-		@import '../styles/global.css';
-		</style>
-	</head>
-	<body>
-		<Header />
-		<main class="px-6 lg:w-1/2 lg:px-0 mt-20 mx-auto pb-10 prose lg:prose-xl">
-			<div class="text-gray-400 uppercase font-semibold tracking-wider text-sm">Hi there</div>
-			<h1 class="text-2xl lg:text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
-				I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
+<PageLayout>
+	<div class="text-gray-400 uppercase font-semibold tracking-wider text-sm">Hi there</div>
+	<h1 class="text-2xl lg:text-3xl font-light">My name is <strong class="font-semibold">Armno Prommarak</strong>.<br>
+		I&rsquo;m a frontend developer at <a href="https://buzzwoo.de" target="_blank">buzzwoo</a>.</h1>
 
-			<p class="mt-20 lg:mt-24">
-				<strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
-				I&rsquo;m currently leading the frontend team at buzzwoo where my focus is on JavaScript, Angular, and frontend performance.
-			</p>
+	<p class="mt-20 lg:mt-24">
+		<strong>I build user interfaces to deliver good user experiences on the web.</strong><br>
+		I&rsquo;m currently leading the frontend team at buzzwoo where my focus is on JavaScript, Angular, and frontend performance.
+	</p>
 
-			<p>In my free time, I enjoy writing, reading books, taking photos, <a href="#">building mechanical keyboards</a> and getting lost on my <a href="#">road bike</a>.</p>
+	<p>In my free time, I enjoy writing, reading books, taking photos, <a href="#">building mechanical keyboards</a> and getting lost on my <a href="#">road bike</a>.</p>
 
-			<p>
-        You can find what I&rsquo;m doing on <a href="https://github.com/armno">GitHub</a>,
-        or check out my <a href="/post">blog</a> to see what I&rsquo;ve learned recently.
-      </p>
+	<p>
+		You can find what I&rsquo;m doing on <a href="https://github.com/armno">GitHub</a>,
+		or check out my <a href="/post">blog</a> to see what I&rsquo;ve learned recently.
+	</p>
 
-      <h3>Get in touch</h3>
-      <p>
-        If you want to contact me, or just want to say hi, you can send me an email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>.
-      </p>
+	<h3>Get in touch</h3>
+	<p>
+		If you want to contact me, or just want to say hi, you can send me an email at <a href="mailto:monkeyarmno@gmail.com">monkeyarmno@gmail.com</a>.
+	</p>
 
-      <p>
-        Have a great day!
-        <br>
-        &ndash; Armno
-      </p>
-		</main>
-	</body>
-</html>
+	<p>
+		Have a great day!
+		<br>
+		&ndash; Armno
+	</p>
+</PageLayout>
