--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,6 @@
+---
+const { pathname } = Astro.request.url;
+---
 <header class="container mx-auto flex justify-between items-center">
   <a href="/" class="inline-block w-20 h-20">
     <svg class="w-20 h-20" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -7,8 +10,18 @@
   </a>
 
   <nav>
-    <a href="#" class="font-bold inline-block mx-4">About</a>
-    <a href="#" class="text-gray-400 inline-block mx-4">Blog</a>
-    <a href="/uses" class="text-gray-400 inline-block mx-4">Uses</a>
+    <a href="/"
+      class={
+      `inline-block mx-4 ${pathname === '/' ? 'font-bold' : 'text-gray-400'}`
+      }>About</a>
+    <a href="/post"
+      class={
+      `inline-block mx-4 ${pathname === '/post' ? 'font-bold' : 'text-gray-400'}`
+      }>Blog</a>
+    <a href="/uses" 
+      class={
+      `inline-block mx-4 ${pathname === '/uses' ? 'font-bold' : 'text-gray-400'}`
+      }
+    >Uses</a>
   </nav>
 </header>
