--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import PageLayout from '../layouts/PageLayout.astro';
+import PageLayout from '@layouts/PageLayout.astro';
 ---
 <PageLayout>
 	<div class="text-gray-400 uppercase font-semibold tracking-wider text-sm">Hi there</div>
