--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,21 +1,13 @@
 ---
-import Header from '../components/Header.astro';
+import Header from '@components/Header.astro';
+import BaseHead from '@components/BaseHead.astro';
+
+const { content } = Astro.props;
+const { title } = content;
 ---
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>Armno.in.th on Astro</title>
-
-		<link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
-		<link rel="preconnect" crossorigin href="https://fonts.googleapis.com">
-		<link href="https://fonts.googleapis.com/css?family=Sarabun:300,400,700|Fira+Mono|IBM+Plex+Sans:400,700&display=swap&subset=thai" rel="stylesheet">
-
-		<!--Favicon-->
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<style global>
-		@import '../styles/global.css';
-		</style>
+		<BaseHead {title} />
 	</head>
 	<body class="antialiased">
 		<Header />
