tweak line height

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,7 +11,7 @@ const { title } = content;
 	</head>
 	<body class="antialiased">
 		<Header />
-		<main class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl lg:leading-[1.4]">
+		<main class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl leading-snug lg:leading-[1.4]">
       <slot />
     </main>
 	</body>
