--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,7 +11,7 @@ const { title } = content;
 	</head>
 	<body class="antialiased">
 		<Header />
-		<article class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl lg:leading-[1.4]">
+		<article class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl leading-normal lg:leading-[1.4]">
       <h1>{title}</h1>
       <slot />
     </article>
