--- a/src/pages/post/index.astro
+++ b/src/pages/post/index.astro
@@ -1,4 +1,5 @@
 ---
+import { groupBy } from 'lodash-es';
 import PageLayout from '@layouts/PageLayout.astro';
 const content = {
   title: 'Blog'
@@ -18,6 +19,11 @@ allPosts.sort((a, b) => new Date(b.date).valueOf() - new Date(a.date).valueOf())
   <h1>Blog</h1>
 
   <ol>
-    {allPosts.map(post => <li><a href={post.url}>{post.title}</a></li>)}
+    {allPosts.map(post => (
+      <li>
+        <a href={post.url}>{post.title}</a>
+        <div>{post.date}</div>
+      </li>)
+    )}
   </ol>
 </PageLayout>
