--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -1,5 +1,5 @@
 ---
-const { src, caption, alt, width, height, loading } = Astro.props;
+const { src, caption, alt, width, height } = Astro.props;
 ---
 
 <figure>
