--- a/src/components/Pagniation.astro
+++ b/src/components/Pagniation.astro
@@ -1,8 +1,8 @@
 ---
-const { next, prev, currentPage, total } = Astro.props;
+const { next, prev } = Astro.props;
 ---
 
-<div class="flex justify-end mt-8 gap-x-3">
-  {prev && <a href={prev}>Newer post</a> }
-  {next && <a href={next}>Older posts</a> }
+<div class="flex justify-center mt-8 gap-x-4">
+  {prev && <a href={prev}>« Newer</a> }
+  {next && <a href={next}>Older »</a> }
 </div>
