--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,9 +1,11 @@
 ---
+import { format } from 'date-fns';
 import Header from '@components/Header.astro';
 import BaseHead from '@components/BaseHead.astro';
+import PublishedDate from '@components/PublishedDate.astro';
 
 const { content } = Astro.props;
-const { title } = content;
+const { title, date } = content;
 ---
 <html lang="en">
 	<head>
@@ -13,6 +15,8 @@ const { title } = content;
 		<Header />
 		<article class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl leading-normal lg:leading-[1.4]">
       <h1>{title}</h1>
+			<PublishedDate {date} />
+			   
       <slot />
     </article>
 	</body>
