--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 
 <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
 <link rel="preconnect" crossorigin href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css?family=Sarabun:300,400,700|Fira+Mono|IBM+Plex+Sans:400,700&display=swap&subset=thai" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sarabun:300,400,700|Fira+Mono|IBM+Plex+Sans+Thai:400,700&display=swap&subset=thai" rel="stylesheet">
 
 <!--Favicon-->
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
