--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -13,7 +13,7 @@ const { title, date } = content;
 	</head>
 	<body class="antialiased">
 		<Header />
-		<article class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl lg:leading-[1.45]">
+		<article class="px-6 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl text-base">
       <h1>{title}</h1>
 			<PublishedDate {date} />
       <slot />
