--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '@components/Header.astro';
 import BaseHead from '@components/BaseHead.astro';
+import '../styles/global.css';
 
 const { content } = Astro.props;
 const { title } = content;
@@ -11,7 +12,7 @@ const { title } = content;
 	</head>
 	<body class="antialiased">
 		<Header />
-		<main class="px-6 lg:w-2/3 lg:px-0 mt-20 mx-auto pb-10 prose prose-slate lg:prose-xl leading-snug lg:leading-[1.4]">
+		<main class="px-6 mt-20 mx-auto pb-24 prose prose-slate prose-xl text-base">
       <slot />
     </main>
 	</body>
