--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -16,7 +16,7 @@ const { title, date } = content;
 		<Header />
 		<article class="px-6 lg:px-0 mt-20 mx-auto pb-24 prose prose-slate prose-xl text-base">
       <h1>{title}</h1>
-			<PublishedDate {date} />
+			<PublishedDate {date} align="center" />
       <slot />
     </article>
 	</body>
