fix image paths

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,11 +14,11 @@ const { url } = Astro.request;
       class={
       `inline-block mx-4 ${url === '/' ? 'font-bold' : 'text-gray-400'}`
       }>About</a>
-    <a href="/post"
+    <a href="/post/"
       class={
       `inline-block mx-4 ${url === ('/post') ? 'font-bold' : 'text-gray-400'}`
       }>Blog</a>
-    <a href="/uses"
+    <a href="/uses/"
       class={
       `inline-block mx-4 ${url === '/uses' ? 'font-bold' : 'text-gray-400'}`
       }
