--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@ export interface Props {
   title: string;
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props as Props;
 ---
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
