--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,22 +1,15 @@
 ---
-import Header from '@components/Header.astro';
-import BaseHead from '@components/BaseHead.astro';
 import PublishedDate from '@components/PublishedDate.astro';
+import PageLayout from './PageLayout.astro';
 import '../styles/global.css';
 
 const { content } = Astro.props;
 const { title, date } = content;
 ---
-<html lang="en">
-	<head>
-		<BaseHead {title} />
-	</head>
-	<body class="antialiased">
-		<Header />
-		<article class="px-6 lg:px-0 mt-20 mx-auto pb-24 prose prose-slate prose-xl text-base">
-      <h1>{title}</h1>
-			<PublishedDate {date} align="center" />
-      <slot />
-    </article>
-	</body>
-</html>
+<PageLayout { content }>
+  <article>
+    <h1>{title}</h1>
+    <PublishedDate {date} align="center" />
+    <slot />
+  </article>
+</PageLayout>
