--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
-<footer class="py-10 text-sm mx-auto text-center">
-  <div>&copy; 2007&hyphen;now. All Rights Reserved.</div>
+<footer class="pt-10 pb-20 text-sm mx-auto text-center text-slate-500">
+  <hr class="mx-auto max-w-xs mb-10 border border-slate-900">
+  <div>&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
-  <div>Armno Prommark<br>Chiang Mai, Thailand</div>
+  <div>Made in <a href="#">Chiang Mai, Thailand</a></div>
 </footer>
