move /post to /blog

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,9 +14,9 @@ const { url } = Astro.request;
       class={
       `inline-block mx-4 ${url === '' ? 'font-bold' : 'text-gray-400'}`
       }>About</a>
-    <a href="/post/"
+    <a href="/blog/"
       class={
-      `inline-block mx-4 ${url.includes('/post') ? 'font-bold' : 'text-gray-400'}`
+      `inline-block mx-4 ${url.includes('/blog') ? 'font-bold' : 'text-gray-400'}`
       }>Blog</a>
     <a href="/uses/"
       class={
