fine tune post layout

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -13,7 +13,7 @@ const { title } = content;
 	</head>
 	<body class="antialiased">
 		<Header />
-		<main class="px-6 mt-20 mx-auto pb-24 prose prose-slate lg:prose-lg">
+		<main class="px-6 mt-20 mx-auto pb-24 prose lg:max-w-3xl prose-slate lg:prose-lg">
       <slot />
     </main>
     <Footer />
