--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -9,7 +9,7 @@ const { title, date } = content;
 <PageLayout { content }>
   <article>
     <h1>{title}</h1>
-    <PublishedDate {date} align="center" />
+    <PublishedDate {date} />
     <slot />
   </article>
 </PageLayout>
