--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,17 @@
 @tailwind utilities;
 
 @layer base {
+
   h1,
   h2,
   h3,
   h4 {
     @apply font-headings;
+  }
+}
+
+@layer components {
+  .message--warning {
+    @apply bg-yellow-100 py-6 px-8;
   }
 }
