migrate 2 more posts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="pt-10 pb-20 text-sm mx-auto text-center text-slate-500">
-  <hr class="mx-auto max-w-xs mb-10 border border-slate-900">
+  <hr class="mx-auto max-w-xs mb-10 border-0 h-1 bg-slate-700">
   <div>&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
   <div>Made in <a href="#">Chiang Mai, Thailand</a></div>
