--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -5,7 +5,7 @@ import PublishedDate from '@components/PublishedDate.astro';
 
 export async function getStaticPaths({ paginate }) {
   let allPosts = await Astro.glob<MarkdownFrontmatter>('./**/*.md');
-  allPosts.sort((a, b) => new Date(b.date).valueOf() - new Date(a.date).valueOf());
+  allPosts.sort((a, b) => new Date(b.frontmatter.date).valueOf() - new Date(a.frontmatter.date).valueOf());
   return paginate(allPosts, { pageSize: 10 });
 }
 
