--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -35,7 +35,7 @@ const content = {
         <article class="p-0 lg:flex mb-24">
           <div class="lg:w-2/5 shrink-0 grow-0 not-prose">
             <a href={post.url}>
-              <img src={post.frontmatter.thumbnail} alt={post.frontmatter.title} />
+              <img class="object-cover aspect-[3/2]" src={post.frontmatter.thumbnail} alt={post.frontmatter.title} />
             </a>
           </div>
           <div class="lg:ml-6">
