--- a/src/components/RelatedPosts.astro
+++ b/src/components/RelatedPosts.astro
@@ -22,7 +22,7 @@ const relatedPosts = allPosts.filter(({ url }) => !currentPathname.includes(url)
 
 {relatedPosts.length > 0 && 
 <section class="mt-20 not-prose">
-  <h4 class="text-2xl font-bold mb-4">Related posts</h4>
+  <h4 class="text-sm text-slate-600 uppercase tracking-widest font-bold mb-4">Related posts</h4>
   <ul class="grid grid-cols-3 gap-x-8">
     {relatedPosts.map(post => (
       <PostItem url={post.url} date={post.frontmatter.date} title={post.frontmatter.title} thumbnail={post.frontmatter.thumbnail} />
