optimize blog list page layout

--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -6,7 +6,7 @@ export interface Props {
 const { next, prev } = Astro.props as Props;
 ---
 
-<div class="text-sm flex justify-center mt-8 gap-x-4">
+<div class="text-lg flex justify-center mt-12 gap-x-4">
   {prev && <a href={prev}>« Newer</a> }
   {next && <a href={next}>Older »</a> }
 </div>
