--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
-const { url } = Astro.request;
+const { pathname } = Astro.canonicalURL;
+
 ---
 <header class="container mx-auto flex justify-between items-center">
   <a href="/" class="inline-block w-20 h-20">
@@ -12,15 +13,15 @@ const { url } = Astro.request;
   <nav>
     <a href="/"
       class={
-      `inline-block mx-4 ${url === '' ? 'font-bold' : 'text-gray-400'}`
+      `inline-block mx-4 ${pathname === '/' ? 'font-bold' : 'text-gray-400'}`
       }>About</a>
     <a href="/blog/"
       class={
-      `inline-block mx-4 ${url.includes('/blog') ? 'font-bold' : 'text-gray-400'}`
+      `inline-block mx-4 ${pathname.includes('/blog/') ? 'font-bold' : 'text-gray-400'}`
       }>Blog</a>
     <a href="/uses/"
       class={
-      `inline-block mx-4 ${url.includes('/uses') ? 'font-bold' : 'text-gray-400'}`
+      `inline-block mx-4 ${pathname.includes('/uses') ? 'font-bold' : 'text-gray-400'}`
       }
     >Uses</a>
   </nav>
