--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -7,7 +7,7 @@ import '../styles/global.css';
 const { content, notProse } = Astro.props;
 const { title, description, thumbnail, language } = content;
 
-let classes = 'px-6 mt-20 mx-auto pb-24 prose prose-slate lg:prose-lg';
+let classes = 'px-6 mt-20 mx-auto pb-24 prose prose-slate';
 if (notProse) {
 	classes = 'px-6 mt-20 mx-auto pb-24';
 }
