--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,12 @@
-<footer class="pt-10 pb-20 text-sm mx-auto text-center text-slate-500">
-  <hr class="mx-auto max-w-xs mb-10 border-0 h-1 bg-slate-700">
-  <div>&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
+<footer class="pt-10 pb-20 text-sm mx-auto text-center">
+  <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700">
+  <p class="mb-12">
+    Thanks for reading.<br><br>
+    Got some feedback? Feel free to drop a comment via 
+    <a href="https://github.com/armno/armno.in.th/issues" target="_blank"
+     class="underline hover:text-green-500">GitHub Issues</a>.
+  </p>
+  <div class="text-slate-500">&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
-  <div>Made in <a href="#">Chiang Mai, Thailand</a></div>
+  <div class=" text-slate-500">Made in <a href="#">Chiang Mai, Thailand</a></div>
 </footer>
