--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,11 @@
 <footer class="pt-10 pb-20 text-sm mx-auto text-center">
   <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700">
-  <p class="mb-12">
-    Thanks for reading.<br><br>
+  <p class="mb-12 text-slate-600">
     Got some feedback? Feel free to drop a comment via 
     <a href="https://github.com/armno/armno.in.th/issues" target="_blank"
      class="underline hover:text-green-500">GitHub Issues</a>.
   </p>
-  <div class="text-slate-500">&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
+  <div class="text-slate-600">&copy; 2007&hyphen;now Armno Prommarak. All Rights Reserved.</div>
 
-  <div class=" text-slate-500">Made in <a href="#">Chiang Mai, Thailand</a></div>
+  <div class=" text-slate-600">Made in <a href="#">Chiang Mai, Thailand</a></div>
 </footer>
