--- a/src/components/PostItem.astro
+++ b/src/components/PostItem.astro
@@ -13,7 +13,12 @@ const { url, title, thumbnail, date, description } = Astro.props as Props;
 
 <article>
   <a href={url} class="hover:text-green-600 block">
+    {thumbnail &&
     <img class="object-cover aspect-[3/2] w-full" src={thumbnail} alt={title} width="300" height="200">
+    }
+    {!thumbnail &&
+    <div class="border w-full h-28 max-h-48"></div>
+    }
     <div class="font-bold font-headings leading-tight mt-[1em]">{title}</div>
   </a>
   {date &&
